# shrinktunes

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
shrinktunes/: cli.py  ffmpeg.py
