[tool.poetry]
name = "shrinktunes"
version = "0.1.0"
description = ""
authors = ["Brian Jorgensen <brian.jorgensen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.6.0"

[tool.poetry.scripts]
shrinktunes = "shrinktunes.cli:cli_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
